# workflow

./: .gitmodules  .travis.yml  CMakeLists.txt  Input_8h_source.html  Output_8h_source.html  README.md  Step_8h_source.html  Vertex_8h_source.html  WorkflowGraph_8h_source.html  Workflow_8h_source.html  annotated.html  classes.html  classworkflow_1_1Input-members.html  classworkflow_1_1Input.html  classworkflow_1_1Input__coll__graph.map  classworkflow_1_1Input__coll__graph.md5  classworkflow_1_1Input__inherit__graph.map  classworkflow_1_1Input__inherit__graph.md5  classworkflow_1_1Output-members.html  classworkflow_1_1Output.html  classworkflow_1_1Output__coll__graph.map  classworkflow_1_1Output__coll__graph.md5  classworkflow_1_1Output__inherit__graph.map  classworkflow_1_1Output__inherit__graph.md5  classworkflow_1_1Step-members.html  classworkflow_1_1Step.html  classworkflow_1_1Step__coll__graph.map  classworkflow_1_1Step__coll__graph.md5  classworkflow_1_1Step__inherit__graph.map  classworkflow_1_1Step__inherit__graph.md5  classworkflow_1_1Vertex-members.html  classworkflow_1_1Vertex.html  classworkflow_1_1Vertex__coll__graph.map  classworkflow_1_1Vertex__coll__graph.md5  classworkflow_1_1Vertex__inherit__graph.map  classworkflow_1_1Vertex__inherit__graph.md5  classworkflow_1_1Workflow-members.html  classworkflow_1_1Workflow.html  dir_10f0b407cadbc6fed7fcc8bb625faeca.html  dir_10f0b407cadbc6fed7fcc8bb625faeca_dep.map  (+38 more)
docs/: workflow.dox
include/workflow/: Connection.h  Input.h  InputPipe.h  Output.h  OutputPipe.h  Step.h  Vertex.h  Workflow.h  WorkflowGraph.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_1.js  classes_2.js  classes_3.js  functions_2.js  search.js  variables_0.js  variables_1.js
src/: Connection.cpp  Input.cpp  InputPipe.cpp  Output.cpp  OutputPipe.cpp  Step.cpp  Vertex.cpp  Workflow.cpp
tests/: CMakeLists.txt  test_Output.cpp  test_Step.cpp  test_Workflow.cpp
